--- a/src/translations/nb.json
+++ b/src/translations/nb.json
@@ -3,7 +3,7 @@
   "personalia.surname": "Etternavn",
   "personalia.fnr": "Fødselsnummer",
   "personalia.foreign_id": "Utenlandsk ID",
-  "personalia.telefon": "Telefon",
+  "personalia.phone": "Telefon",
   "personalia.account_no": "Kontonummer",
   "personalia.email": "e-post",
   "personalia.language": "Språk",
