--- a/src/translations/nb.json
+++ b/src/translations/nb.json
@@ -15,5 +15,9 @@
   "personalia.security_measure": "Sikkerhetstiltak",
   "personalia.gender": "Kjønn",
   "personalia.customized_comm": "Tilpasset kommunikasjon",
-  "personalia.source": "Kilde: NAV, Skatteetaten, Folkeregisteret, Kontakt- og reservasjonsregisteret"
+  "personalia.source": "Kilde: NAV, Skatteetaten, Folkeregisteret, Kontakt- og reservasjonsregisteret",
+  "adresse.bostedsadresse": "Bostedsadresse",
+  "adresse.gate": "Gate",
+  "adresse.postnummer": "Postnummer",
+  "adresse.poststed": "Poststed"
 }
