--- a/src/translations/nb.json
+++ b/src/translations/nb.json
@@ -19,5 +19,8 @@
   "adresse.bostedsadresse": "Bostedsadresse",
   "adresse.gate": "Gate",
   "adresse.postnummer": "Postnummer",
-  "adresse.poststed": "Poststed"
+  "adresse.poststed": "Poststed",
+  "postadresse.adresse1": "Tilleggsadresse 1",
+  "postadresse.adresse2": "Tilleggsadresse 2",
+  "postadresse.adresse3": "Tilleggsadresse 3"
 }
