--- a/src/translations/nb.json
+++ b/src/translations/nb.json
@@ -21,6 +21,7 @@
   "adresse.gate": "Gate",
   "adresse.postnummer": "Postnummer",
   "adresse.poststed": "Poststed",
+  "adresse.adresse": "Adresse",
   "adresse.adresse1": "Adresselinje 1",
   "adresse.adresse2": "Adresselinje 2",
   "adresse.adresse3": "Adresselinje 3",
