--- a/src/translations/nb.json
+++ b/src/translations/nb.json
@@ -22,6 +22,9 @@
   "adresse.gate": "Gate",
   "adresse.postnummer": "Postnummer",
   "adresse.poststed": "Poststed",
+  "adresse.dato": "Dato",
+  "adresse.kommune": "Kommune",
+  "adresse.bolignummer": "Bolignummer",
   "adresse.adresse": "Adresse",
   "adresse.adresse1": "Adresselinje 1",
   "adresse.adresse2": "Adresselinje 2",
