Edit Personalia source

--- a/src/translations/nb.json
+++ b/src/translations/nb.json
@@ -17,7 +17,7 @@
   "personalia.security_measure": "Sikkerhetstiltak",
   "personalia.gender": "Kjønn",
   "personalia.customized_comm": "Tilpasset kommunikasjon",
-  "personalia.source": "Kilde: NAV, Skatteetaten, Folkeregisteret, Kontakt- og reservasjonsregisteret",
+  "personalia.source": "Kilde: NAV, Folkeregisteret",
   "adresse.bostedsadresse": "Bostedsadresse",
   "adresse.gate": "Gate",
   "adresse.postnummer": "Postnummer",
