--- a/src/translations/nb.json
+++ b/src/translations/nb.json
@@ -22,7 +22,7 @@
   "adresse.gate": "Gate",
   "adresse.postnummer": "Postnummer",
   "adresse.poststed": "Poststed",
-  "adresse.dato": "Dato",
+  "adresse.dato": "Flyttedato",
   "adresse.kommune": "Kommune",
   "adresse.bolignummer": "Bolignummer",
   "adresse.adresse": "Adresse",
