--- a/src/translations/nb.json
+++ b/src/translations/nb.json
@@ -20,6 +20,7 @@
   "personalia.customized_comm": "Tilpasset kommunikasjon",
   "personalia.source": "Kilde: NAV, Folkeregisteret",
   "adresse.bostedsadresse": "Bostedsadresse",
+  "adresse.adressetillegg": "Adressetillegg",
   "adresse.gate": "Gate",
   "adresse.postnummer": "Postnummer",
   "adresse.poststed": "Poststed",
