--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -22,6 +22,9 @@
   "personalia.customized_comm": "Tilpasset kommunikasjon",
   "personalia.source": "Kilde: NAV, Folkeregisteret",
   "adresse.bostedsadresse": "Bostedsadresse",
+  "adresse.tilleggsadresse": "Tilleggsadresse",
+  "adresse.utenlandskadresse": "Utenlandsk adresse",
+  "adresse.postadresse": "Postadresse",
   "adresse.adressetillegg": "Adressetillegg",
   "adresse.gate": "Gate",
   "adresse.postnummer": "Postnummer",
