--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,7 +1,8 @@
 {
+  "alternativer.tittel": "Andre alternativer",
   "header.hello": "Hei {name}!",
   "header.intro": "Her kan du se opplysninger som NAV har registrert om deg.",
-  "header.description": "<a href='https://www.nav.no/personvern' target='blank' rel='noopener noreferrer'>Les om personvern i Arbeids- og velferdsetaten her.</a>",
+  "header.description": "<a href='https://www.nav.no/personvern' target='blank' rel='noopener noreferrer' class='lenke'>Les om personvern i Arbeids- og velferdsetaten her.</a>",
   "personalia.first_name": "Fornavn",
   "personalia.first_and_middle_name": "For- og mellomnavn",
   "personalia.surname": "Etternavn",
