Endre fra tilleggsadresse til midlertidig adresse og legg til poststed på postadresse

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -22,7 +22,7 @@
   "personalia.customized_comm": "Tilpasset kommunikasjon",
   "personalia.source": "Kilde: NAV, Folkeregisteret",
   "adresse.bostedsadresse": "Bostedsadresse",
-  "adresse.tilleggsadresse": "Tilleggsadresse",
+  "adresse.midlertidigadresse": "Midlertidig adresse",
   "adresse.utenlandskadresse": "Utenlandsk adresse",
   "adresse.postadresse": "Postadresse",
   "adresse.adressetillegg": "Adressetillegg",
