Endre mellomrom mellom header og brodsmulesti + hent overskrifter fra språk-filene

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,4 +1,6 @@
 {
+  "brodsmulesti.dittnav": "Ditt NAV",
+  "brodsmulesti.dinepersonopplysninger": "Dine personopplysninger",
   "alternativer.tittel": "Andre alternativer",
   "header.hello": "Hei {name}!",
   "header.intro": "Her kan du se opplysninger som NAV har registrert om deg.",
