--- a/src/translations/nb.json
+++ b/src/translations/nb.json
@@ -1,4 +1,6 @@
 {
+  "brodsmulesti.dittnav": "Ditt NAV",
+  "brodsmulesti.dinepersonopplysninger": "Dine personopplysninger",
   "alternativer.tittel": "Andre alternativer",
   "header.hello": "Hei {name}!",
   "header.intro": "Her kan du se opplysninger som NAV har registrert om deg.",
