Flytt adresser inn i samme boks, legg til undertittel

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -24,6 +24,7 @@
   "personalia.gender": "Kjønn",
   "personalia.customized_comm": "Tilpasset kommunikasjon",
   "personalia.source": "Kilde: NAV, Folkeregisteret",
+  "adresse.adresser": "Adresser",
   "adresse.bostedsadresse": "Bostedsadresse",
   "adresse.midlertidigadresse": "Midlertidig adresse",
   "adresse.utenlandskadresse": "Utenlandsk adresse",
