--- a/src/translations/nb.json
+++ b/src/translations/nb.json
@@ -24,6 +24,7 @@
   "personalia.gender": "Kjønn",
   "personalia.customized_comm": "Tilpasset kommunikasjon",
   "personalia.source": "Kilde: NAV, Folkeregisteret",
+  "adresse.adresser": "Adresser",
   "adresse.bostedsadresse": "Bostedsadresse",
   "adresse.midlertidigadresse": "Midlertidig adresse",
   "adresse.utenlandskadresse": "Utenlandsk adresse",
