--- a/src/translations/nb.json
+++ b/src/translations/nb.json
@@ -46,6 +46,5 @@
   "footer.content.line1": "I tjenesten Dine saker på nav.no kan du se saksdokumenter fra dine saker hos NAV.",
   "footer.content.line2": "På grunn av tekniske og juridiske begrensninger vil ikke alle dokumenter vises.",
   "footer.content.line3": "Hvis du er part i en sak hos NAV, kan du få innsyn i sakens dokumenter på Dine saker.",
-  "footer.content.line4": "Du kan også kontakte NAV Kontaktsenter, tlf. 55 55 33 33, og be om partsinnsyn.",
-  "source": "Kilde"
+  "footer.content.line4": "Du kan også kontakte NAV Kontaktsenter, tlf. 55 55 33 33, og be om partsinnsyn."
 }
