Flytt ikonet til venstre. Endre marger

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,4 +1,5 @@
 {
+  "sidetittel": "Dine personopplysninger",
   "brodsmulesti.dittnav": "Ditt NAV",
   "brodsmulesti.dinepersonopplysninger": "Dine personopplysninger",
   "alternativer.tittel": "Andre alternativer",
