--- a/src/translations/nb.json
+++ b/src/translations/nb.json
@@ -1,4 +1,5 @@
 {
+  "sidetittel": "Dine personopplysninger",
   "brodsmulesti.dittnav": "Ditt NAV",
   "brodsmulesti.dinepersonopplysninger": "Dine personopplysninger",
   "alternativer.tittel": "Andre alternativer",
