Legg til kilde på kontonummer

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -24,8 +24,10 @@
   "personalia.security_measure": "Sikkerhetstiltak",
   "personalia.gender": "Kjønn",
   "personalia.customized_comm": "Tilpasset kommunikasjon",
-  "personalia.source": "Kilde: NAV, Folkeregisteret",
+  "personalia.source.folkeregisteret": "Kilde: Folkeregisteret",
+  "personalia.source.nav": "Kilde: NAV",
   "personalia.link.folkeregisteret": "Gå til Folkeregisteret for å endre informasjonen",
+  "personalia.link.brukerprofil": "Gå til Din Brukerprofil",
   "adresse.adresser": "Adresser",
   "adresse.bostedsadresse": "Bostedsadresse",
   "adresse.midlertidigadresse": "Midlertidig adresse",
