Fungerende kall og design av dkif

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,7 +1,7 @@
 {
-  "sidetittel": "Dine personopplysninger",
+  "sidetittel": "Personopplysninger",
   "brodsmulesti.dittnav": "Ditt NAV",
-  "brodsmulesti.dinepersonopplysninger": "Dine personopplysninger",
+  "brodsmulesti.dinepersonopplysninger": "Personopplysninger",
   "alternativer.tittel": "Andre alternativer",
   "header.hello": "Hei {name}!",
   "header.intro": "Her kan du se opplysninger som NAV har registrert om deg.",
@@ -26,8 +26,14 @@
   "personalia.customized_comm": "Tilpasset kommunikasjon",
   "personalia.source.folkeregisteret": "Kilde: Folkeregisteret",
   "personalia.source.nav": "Kilde: NAV",
-  "personalia.link.folkeregisteret": "Gå til Folkeregisteret for å endre informasjonen",
-  "personalia.link.brukerprofil": "Gå til Din Brukerprofil",
+  "personalia.source.dkif": "Kilde: Kontakt - og reservasjonsregisteret",
+  "personalia.link.folkeregisteret": "Endre hos Folkeregisteret",
+  "personalia.link.brukerprofil": "Endre i Din Profil",
+  "personalia.link.dkif": "Endre i Kontakt- og reservasjonsregisteret ",
+  "personalia.dkif.overskrift": "Opplysninger fra Kontakt - og reservasjonsregisteret",
+  "personalia.dkif.beskrivelse": "Opplysningene under har vi hentet fra Kontakt- og reservasjonsregisteret, som er et felles nasjonalt register. Stat og kommune må ha tilgang til rette kontaktopplysninger for deg for å kunne sende deg meldinger og dokumenter elektronisk.",
+  "personalia.dkif.kanVarsles": "Du har <b>ikke</b> reservert deg mot elektronisk kommunikasjon.",
+  "personalia.dkif.kanIkkeVarsles": "Du har reservert deg mot elektronisk kommunikasjon.",
   "adresse.adresser": "Adresser",
   "adresse.bostedsadresse": "Bostedsadresse",
   "adresse.midlertidigadresse": "Midlertidig adresse",
