Feilhåndter Kontakt - og reservasjonsregistere

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -14,7 +14,7 @@
   "personalia.foreign_id": "Utenlandsk ID",
   "personalia.phone": "Telefon",
   "personalia.account_no": "Kontonummer",
-  "personalia.email": "e-post",
+  "personalia.email": "E-post",
   "personalia.language": "Språk",
   "personalia.citizenship": "Statsborgerskap",
   "personalia.status": "Personstatus",
@@ -34,6 +34,7 @@
   "personalia.dkif.beskrivelse": "Opplysningene under har vi hentet fra Kontakt- og reservasjonsregisteret, som er et felles nasjonalt register. Stat og kommune må ha tilgang til rette kontaktopplysninger for deg for å kunne sende deg meldinger og dokumenter elektronisk.",
   "personalia.dkif.kanVarsles": "Du har <b>ikke</b> reservert deg mot elektronisk kommunikasjon.",
   "personalia.dkif.kanIkkeVarsles": "Du har reservert deg mot elektronisk kommunikasjon.",
+  "personalia.dkif.ingenData": "Ingen opplysninger funnet i Kontakt - og reservasjonsregisteret",
   "adresse.adresser": "Adresser",
   "adresse.bostedsadresse": "Bostedsadresse",
   "adresse.bostedsadresse.apneTekst": "Vis detaljer",
