--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -14,6 +14,7 @@
   "personalia.foreign_id": "Utenlandsk ID",
   "personalia.phone": "Telefon",
   "personalia.account_no": "Kontonummer",
+  "personalia.account_no.ingenData": "Vi har ikke registrert noen kontonummer på deg. <br> Du kan registrere kontonummer via Din Profil.",
   "personalia.email": "E-post",
   "personalia.language": "Språk",
   "personalia.citizenship": "Statsborgerskap",
@@ -28,7 +29,8 @@
   "personalia.source.nav": "Kilde: NAV",
   "personalia.source.dkif": "Kilde: Kontakt - og reservasjonsregisteret",
   "personalia.link.folkeregisteret": "Endre hos Folkeregisteret",
-  "personalia.link.brukerprofil": "Endre i Din Profil",
+  "personalia.link.brukerprofil.endre": "Endre i Din Profil",
+  "personalia.link.brukerprofil.leggtil": "Legg til i Din Profil",
   "personalia.link.dkif": "Endre i Kontakt- og reservasjonsregisteret ",
   "personalia.dkif.overskrift": "Opplysninger fra Kontakt - og reservasjonsregisteret",
   "personalia.dkif.beskrivelse": "Opplysningene under har vi hentet fra Kontakt- og reservasjonsregisteret, som er et felles nasjonalt register. Stat og kommune må ha tilgang til rette kontaktopplysninger for deg for å kunne sende deg meldinger og dokumenter elektronisk.",
@@ -40,7 +42,9 @@
   "adresse.bostedsadresse.apneTekst": "Vis detaljer",
   "adresse.bostedsadresse.lukkTekst": "Skjul detaljer",
   "adresse.midlertidigadresse": "Midlertidig adresse",
+  "adresse.midlertidigadresse.leggtil.beskrivelse": "Vi har ikke registrert en midlertidig adresse på deg. <br>Har du en midlertidig adresse du ønsker vi skal sende post til? ",
   "adresse.utenlandskadresse": "Utenlandsk adresse",
+  "adresse.utenlandskadresse.leggtil.beskrivelse": "Vi har ikke registrert en midlertidig adresse på deg. <br>Har du en utenlandsk adresse du ønsker vi skal sende post til? ",
   "adresse.postadresse": "Postadresse",
   "adresse.adressetillegg": "Adressetillegg",
   "adresse.gate": "Gate",
