--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -31,12 +31,13 @@
   "personalia.link.folkeregisteret": "Endre hos Folkeregisteret",
   "personalia.link.brukerprofil.endre": "Endre i Din Profil",
   "personalia.link.brukerprofil.leggtil": "Legg til i Din Profil",
-  "personalia.link.dkif": "Endre i Kontakt- og reservasjonsregisteret ",
+  "personalia.link.dkif.endre": "Endre i Kontakt- og reservasjonsregisteret ",
+  "personalia.link.dkif.leggtil": "Gå til Kontakt- og reservasjonsregisteret ",
   "personalia.dkif.overskrift": "Opplysninger fra Kontakt - og reservasjonsregisteret",
-  "personalia.dkif.beskrivelse": "Opplysningene under har vi hentet fra Kontakt- og reservasjonsregisteret, som er et felles nasjonalt register. Stat og kommune må ha tilgang til rette kontaktopplysninger for deg for å kunne sende deg meldinger og dokumenter elektronisk.",
+  "personalia.dkif.beskrivelse": "Kontakt- og reservasjonsregisteret er et felles nasjonalt register. NAV må ha tilgang til rette kontaktopplysninger for deg for å kunne sende deg meldinger og dokumenter elektronisk.",
   "personalia.dkif.kanVarsles": "Du har <b>ikke</b> reservert deg mot elektronisk kommunikasjon.",
   "personalia.dkif.kanIkkeVarsles": "Du har reservert deg mot elektronisk kommunikasjon.",
-  "personalia.dkif.ingenData": "Ingen opplysninger funnet i Kontakt - og reservasjonsregisteret",
+  "personalia.dkif.ingenData": "Ingen opplysninger registrert",
   "adresse.adresser": "Adresser",
   "adresse.bostedsadresse": "Bostedsadresse",
   "adresse.bostedsadresse.apneTekst": "Vis detaljer",
