--- a/src/translations/nb.json
+++ b/src/translations/nb.json
@@ -2,7 +2,7 @@
   "sidetittel": "Personopplysninger",
   "brodsmulesti.dittnav": "Ditt NAV",
   "brodsmulesti.dinepersonopplysninger": "Personopplysninger",
-  "alternativer.tittel": "Andre alternativer",
+  "alternativer.tittel": "Mer informasjon",
   "header.hello": "Hei {name}!",
   "header.intro": "Her kan du se opplysninger som NAV har registrert om deg.",
   "header.description": "<a href='https://www.nav.no/personvern' target='blank' rel='noopener noreferrer' class='lenke'>Les om personvern i Arbeids- og velferdsetaten her.</a>",
