Legg til telefonnummer, endre tekster og feilmeldinger

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -12,9 +12,6 @@
   "personalia.fnr": "Fødselsnummer",
   "personalia.dnr": "D-nummer",
   "personalia.foreign_id": "Utenlandsk ID",
-  "personalia.phone": "Telefon",
-  "personalia.account_no": "Kontonummer",
-  "personalia.account_no.ingenData": "Vi har ikke registrert noen kontonummer på deg. <br> Du kan registrere kontonummer via Din Profil.",
   "personalia.email": "E-post",
   "personalia.language": "Språk",
   "personalia.citizenship": "Statsborgerskap",
@@ -28,11 +25,20 @@
   "personalia.source.folkeregisteret": "Kilde: Folkeregisteret",
   "personalia.source.nav": "Kilde: NAV",
   "personalia.source.dkif": "Kilde: Kontakt - og reservasjonsregisteret",
-  "personalia.link.folkeregisteret": "Endre hos Folkeregisteret",
-  "personalia.link.brukerprofil.endre": "Endre i Din Profil",
-  "personalia.link.brukerprofil.leggtil": "Legg til i Din Profil",
+  "personalia.link.folkeregisteret": "Endre i Folkeregisteret",
+  "personalia.link.brukerprofil.endre": "Endre i Din profil",
+  "personalia.link.brukerprofil.leggtil": "Legg til i Din profil",
   "personalia.link.dkif.endre": "Endre i Kontakt- og reservasjonsregisteret ",
   "personalia.link.dkif.leggtil": "Gå til Kontakt- og reservasjonsregisteret ",
+  "personalia.kontonr": "Kontonummer",
+  "personalia.kontonr.oveskrift": "Kontonummer NAV utbetaler til",
+  "personalia.kontonr.ingenData": "Vi har ikke registrert kontonummer på deg. <br>Du kan registrere kontonummer via Din profil.",
+  "personalia.tlfnr": "Telefon",
+  "personalia.tlfnr.oveskrift": "Telefonnummer NAV kan kontakte deg på",
+  "personalia.tlfnr.ingenData": "Vi har ikke registrert telefonnummer på deg i våre registre. <br>Har du et telefonummer vi kan kontakte deg på?",
+  "personalia.tlfnr.jobb": "Jobb",
+  "personalia.tlfnr.privat": "Privat",
+  "personalia.tlfnr.mobil": "Mobil",
   "personalia.dkif.overskrift": "Opplysninger fra Kontakt - og reservasjonsregisteret",
   "personalia.dkif.beskrivelse": "Kontakt- og reservasjonsregisteret er et felles nasjonalt register. NAV må ha tilgang til rette kontaktopplysninger for deg for å kunne sende deg meldinger og dokumenter elektronisk.",
   "personalia.dkif.kanVarsles": "Du har <b>ikke</b> reservert deg mot elektronisk kommunikasjon.",
@@ -43,9 +49,9 @@
   "adresse.bostedsadresse.apneTekst": "Vis detaljer",
   "adresse.bostedsadresse.lukkTekst": "Skjul detaljer",
   "adresse.midlertidigadresse": "Midlertidig adresse",
-  "adresse.midlertidigadresse.leggtil.beskrivelse": "Vi har ikke registrert en midlertidig adresse på deg. <br>Har du en midlertidig adresse du ønsker vi skal sende post til? ",
+  "adresse.midlertidigadresse.leggtil.beskrivelse": "Vi har ikke registrert en midlertidig adresse på deg. <br>Har du en midlertidig adresse vi kan sende post til? ",
   "adresse.utenlandskadresse": "Utenlandsk adresse",
-  "adresse.utenlandskadresse.leggtil.beskrivelse": "Vi har ikke registrert en midlertidig adresse på deg. <br>Har du en utenlandsk adresse du ønsker vi skal sende post til? ",
+  "adresse.utenlandskadresse.leggtil.beskrivelse": "Vi har ikke registrert en midlertidig adresse på deg. <br>Har du en utenlandsk adresse vi kan sende post til? ",
   "adresse.postadresse": "Postadresse",
   "adresse.adressetillegg": "Adressetillegg",
   "adresse.gate": "Gate",
